# django-rest

./: .coveragerc  .dockerignore  .env.dist  .env.local  .gitignore  .pre-commit-config.yaml  .prettierrc  .watchmanconfig  .yamllint.yaml  Dockerfile  Makefile  README.md  blog.sqlite3  cloudbuild.yaml  db.sh  docker-compose.debug.yml  docker-compose.local.yml  docker-compose.profile.yml  docker-compose.yml  filebeat.yml  gunicorn.py  gunicorn_config.py  locustfile.py  manage.py  middleware.py  mypy.ini  nginx.conf  package-lock.json  package.json  pg-bootstrap.sh  prospector.yaml  pyproject.toml  renovate.json  renovate.json5  runserver.sh  schema.yml  settings.yaml  setup.cfg  test_mutation.toml
.claude/: settings.local.json
.github/actions/: install-deps.yaml
.github/actions/install-deps/: action.yaml
.github/actions/postgresql-setup/: postgresql-setup.yaml
.github/workflows/: _gcp.yaml  ci.yaml  ci.yml  create-release.yaml  create-release.yml  create-tag.yaml  dependabot.yaml  dependabot.yml  docker-build-and-push.yaml  docker-build-and-push.yml  docker-lint.yaml  docker.yaml  e2e-test.yaml  e2e-test.yml  gcp.yaml  helm-validation.yml  postgresql-setup.yaml  renovate.yaml  renovate.yml  terraform.yaml
djangoblog/: Dockerfile  Makefile  __init__.py  admin.py  asgi.py  base.py  blog.sqlite3  celery.py  celeryconfig.py  config.py  constants.py  db_router.py  factory.py  filter.py  formatters.py  forms.py  hooks.py  logger.py  metrics.py  middleware.py  models.py  settings.py  storage.py  tasks.py  urls.py  utilities.py  utils.py  view.py  wsgi.py
djangoblog/api/: error.py  exceptions.py  models.py  urls.py  views.py
djangoblog/api/migrations/: 0001_initial.py  0002_auto_20220305_1517.py  0002_auto_20220418_1702.py  0003_remove_post_user_id.py  0003_rename_tag_post_tags.py  0004_auto_20220425_1819_squashed_0005_rename_body_post_content.py  0004_post_created_at.py  0005_alter_post_body.py  0006_alter_post_body.py  0006_postpermissions_post_permissions.py  0007_alter_tags_id.py  0007_auto_20220411_1853.py  0008_alter_post_created_at.py  0008_auto_20220415_1452.py  0009_post_draft.py  0009_post_posts_title_4d5512_idx.py  0010_alter_post_content_alter_post_slug_alter_post_user_and_more.py  0010_auto_20220416_1307.py  0011_remove_post_posts_title_4d5512_idx_and_more.py
djangoblog/api/models/: author.py  category.py  managers.py  post.py
djangoblog/api/tests/: test_models.py  test_views.py
djangoblog/api/v1/: urls.py
djangoblog/authentication/: apps.py  forms.py  urls.py  views.py
djangoblog/authentication/static/: style.css
djangoblog/authentication/templates/: login.html  signup.html
djangoblog/authentication/tests/: test_views.py
djangoblog/custom_settings/: __init__.py  admin.py  logging.py
djangoblog/docker/nginx/: Dockerfile  nginx.conf
djangoblog/fixtures/: local.yaml  test.yaml
djangoblog/management/commands/: README.md  compression.py  create_posts.py  create_superuser.py  metrics.py  permissions.py  post.py  seed.py  test.py  test_db_connection.py  user.py
djangoblog/metrics/: gunicorn.py  monitor.py
djangoblog/migrations/: 0001_initial.py  0002_alter_userprofile_options_alter_userprofile_table.py  0002_auto_20220408_1729.py  0002_delete_posts.py  0003_auto_20220408_1737.py  0003_delete_posts.py  0004_remove_userprofile_username.py  0005_auto_20220408_1844.py  0006_remove_userprofile_username.py  0007_alter_userprofile_name.py  0008_alter_userprofile_managers.py  0009_auto_20220416_0852.py
djangoblog/models/: posts.py
djangoblog/repository/: base.py  post.py  tags.py  user.py
djangoblog/services/: post.py
djangoblog/static/: script.js  styles.css
djangoblog/static/fonts/: fonts.css
djangoblog/tasks/: post.py
djangoblog/templates/: 404.html  _pagination.html  base.html  blog.html  home.html  post.html  swagger-ui.html
djangoblog/tests/: test_gunicorn.py  test_migrations.py  test_statics.py  test_swagger.py  test_views.py
djangoblog/utils/: context_managers.py  limit_test.py  utils.py
docker/: Dockerfile.debug  docker-compose.common.yml  docker-compose.yml
docker/celery-exporter/: Dockerfile
docker/debugpy/: Dockerfile
docker/haproxy/: Dockerfile  haproxy.cfg
docker/nginx/: Dockerfile  nginx.conf
docker/pgbouncer/: Dockerfile  README.md  pgbouncer.ini  userlist.txt
docker/postgres/: Dockerfile  create-multiple-postgresql-databases.sh  custom-postgresql.conf  pgbouncer.ini  postgresql.conf
docker/rabbitmq/: Dockerfile
docker/redis/: Dockerfile  README.md  redis-entrypoint.sh  redis.conf  sentinel.conf
docker/statsd/: Dockerfile  statsd.yml
e2e/: signup.py
infra/: README.md  nginx-pod.yaml
infra/alertmanager/: README.md  alertmanager.yml.template
infra/grafana/: Makefile  README.md  dashboard.json  dashboard.jsonnet  panels.jsonnet  queries.jsonnet  variables.libsonnet
infra/grafana/queries/: django.libsonnet  haproxy.libsonnet  pgbouncer.libsonnet  postgres.libsonnet  queries.libsonnet
infra/k8s/: .chart-schema.yaml  .checkov.yaml  .kubeconform.yaml  Chart.yaml  ConfigMap.yaml  Makefile  README.md  app-deployment.yaml  celery-worker-pod.yaml  ct.yaml  dj-app-debug-deployment.yaml  dj-app-deployment.yaml  dj-app-service.yaml  djdata-persistentvolumeclaim.yaml  env-configmap.yaml  env-prod-configmap.yaml  haproxy-deployment.yaml  haproxy-service.yaml  helmfile.yaml  nginx-configmap.yaml  nginx-persistant-volume.yaml  nginx-pod.yaml  nginx-service.yaml  postgres-pod.yaml  postgres-service.yaml  priority.yaml  redis-cm1-configmap.yaml  redis-pod.yaml  redis-service.yaml  staticfiles-job.yaml  values.yaml  workload-identity-user.yaml
infra/prometheus/: prometheus.yml  rules.yml
infra/terraform/: .gitignore  .terraform.lock.hcl  artifact.tf  buckets.tf  dns.tf  firewall.tf  gke.tf  iam.tf  loadbalancer.tf  main.tf  nat.tf  node_pools.tf  output.tf  provider.tf  router.tf  subnet.tf  variables.tf
scripts/: cert.sh  git_update.sh  secret-importer.sh
tests/: test_signup.py
thunder-tests/: thunderActivity.json  thunderCollection.json  thunderEnvironment.json  thunderclient.json
(+133 files in other folders)
